fixed overflow issue with certain fonts

--- a/src/stylus/components/_lists.styl
+++ b/src/stylus/components/_lists.styl
@@ -73,6 +73,7 @@ theme(list, "list")
 
     &__title
       transition: $primary-transition
+      height: 22px
       position: relative
       text-align: left
 
